--- a/_themes/classy/layout.html
+++ b/_themes/classy/layout.html
@@ -1,6 +1,6 @@
 {% extends "basic/layout.html" %}
 {%- block htmltitle %}
-<title>Classy Classes for JavaScript</title>
+<title>Panya Documentation</title>
 {%- endblock %}
 {# do not display relbars #}
 {% block relbar1 %}{% endblock %}
